--- a/As_Demo/app/src/main/res/values/colors.xml
+++ b/As_Demo/app/src/main/res/values/colors.xml
@@ -4,10 +4,15 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-
+    <!--app_fonts-->
     <color name="app_bg">#F2F2F2</color>
     <color name="fr_tab_indicator">#FF6219</color>
     <color name="bg_grey">#909090</color>
     <color name="font_orange">#FD693C</color>
     <color name="font_grey">#717171</color>
+    <color name="font_color_line">#E5E1E1</color>
+    <color name="font_color_title">#F7F7F7</color>
+    <color name="font_color_black">#282828</color>
+    <color name="color_black">#000000</color>
+    <color name="color_white">#ffffff</color>
 </resources>
