--- a/As_Demo/libraryUtils/src/main/res/layout/toast_layout.xml
+++ b/As_Demo/libraryUtils/src/main/res/layout/toast_layout.xml
@@ -1,26 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/dialog_view"
+    android:id="@+id/ll_toast_view"
     android:layout_width="140dp"
-    android:layout_height="120dp"
-    android:background="@drawable/shape_dialog_2dp"
+    android:layout_height="30dp"
+    android:background="@drawable/shape_toast_blue"
     android:gravity="center"
-    android:minHeight="80dp"
-    android:minWidth="80dp"
     android:orientation="vertical"
     android:padding="10dp">
 
-    <ImageView
-        android:id="@+id/img"
-        android:layout_width="30dp"
-        android:layout_height="30dp" />
-
 
     <TextView
-        android:id="@+id/tipTextView"
+        android:id="@+id/tv_toast_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:textColor="@color/white" />
-
 </LinearLayout>
