--- a/As_Demo/app/src/main/res/values/colors.xml
+++ b/As_Demo/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="color_white">#ffffff</color>
     <color name="color_FF4F1D">#FF4F1D</color>
     <color name="color_grey">#D9D9D9</color>
+    <color name="white">#fff</color>
 </resources>
