--- a/As_Demo/app/src/main/res/layout/tab_view.xml
+++ b/As_Demo/app/src/main/res/layout/tab_view.xml
@@ -9,6 +9,8 @@
         style="@style/tool_bar_title_black"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:text="测试" />
 
 </LinearLayout>
