--- a/As_Demo/app/src/main/res/values/colors.xml
+++ b/As_Demo/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#FF4081</color>
 
     <!--app_fonts-->
-    <color name="app_bg">#F2F2F2</color>
+    <color name="app_bg">#F8F8F8</color>
     <color name="fr_tab_indicator">#FF6219</color>
     <color name="bg_grey">#909090</color>
     <color name="font_orange">#FD693C</color>
@@ -18,4 +18,5 @@
     <color name="color_FF4F1D">#FF4F1D</color>
     <color name="color_grey">#D9D9D9</color>
     <color name="white">#fff</color>
+    <color name="splash_bg">#F0F0F0</color>
 </resources>
