--- a/As_Demo/app/src/main/res/layout/activity_main.xml
+++ b/As_Demo/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:emj="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -37,11 +37,13 @@
         <!--tools:text="这是一个我在开发中用到的技术的Demo"-->
 
         <com.team.demo.ourlibrary.widget.ContainsEmojiEditText
-            emj:Attr="555"
-            emj:text="@string/app_name"
-            android:text="测试自定义属性"
+            android:id="@+id/emjet_demo"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="测试自定义属性"
+            android:textColor="@color/bg_grey"
+            emj:Attr="555"
+            emj:text="@string/app_name" />
 
         <Button
             android:id="@+id/bt_home"
